--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
 		<div class="row">
 			<div class="col-lg-8">
 				<ul class="list-inline d-flex justify-content-between py-3">
-					<li class="list-inline-item"><i class="ti-user mr-2"></i>Post by {{site.author.name}}</li>
+					<li class="list-inline-item"><i class="ti-user mr-2"></i>Postado por {{site.author.name}}</li>
 					<li class="list-inline-item"><i class="ti-calendar mr-2"></i>{{page.date | date: '%b %d, %Y'}}</li>
 				</ul>
 				{% if page.image %}
