--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
     </form>
   </div>
   <div class="widget">
-    <h6 class="mb-4">LATEST POST</h6>
+    <h6 class="mb-4">Posts recentes</h6>
     {% for post in site.posts limit:3 %}
     <div class="media mb-4">
       <div class="post-thumb-sm mr-3">
@@ -14,7 +14,7 @@
       </div>
       <div class="media-body">
         <ul class="list-inline d-flex justify-content-between mb-2">
-          <li class="list-inline-item">Post By {{site.author.name | split: ' ' | first}}</li>
+          <li class="list-inline-item">Postado por {{site.author.name | split: ' ' | first}}</li>
           <li class="list-inline-item">{{post.date | date: "%B %-d, %Y"}}</li>
         </ul>
         <h6><a class="text-dark" href="{{ post.url }}">{{ post.title }}</a></h6>
@@ -23,7 +23,7 @@
     {% endfor %}
   </div>
   <div class="widget">
-    <h6 class="mb-4">TAG</h6>
+    <h6 class="mb-4">Leia mais sobre</h6>
     {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
     {% assign tag_words = site_tags | split:',' | sort %}
     <ul class="list-inline tag-list">
@@ -35,7 +35,7 @@
     </ul>
   </div>
   <div class="widget">
-    <h6 class="mb-4">CATEGORIES</h6>
+    <h6 class="mb-4">Categorias</h6>
     <ul class="list-inline tag-list">
       {% for category in site.categories %}
       <li class="list-inline-item m-1"><a href="{{ 'category/' | relative_url }}{{ category | first }}">{{ category | first }}</a></li>
