--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -26,7 +26,7 @@ layout: default
               <p class="text-uppercase mb-2">{{ post.categories }}</p>
               <h4 class="title-border"><a class="text-dark" href="{{ post.url | relative_url }}">{{post.title}}</a></h4>
               <p>{{ post.content | strip_html | truncatewords: 35 }}</p>
-              <a href="{{ post.url | relative_url }}" class="btn btn-transparent">read more</a>
+              <a href="{{ post.url | relative_url }}" class="btn btn-transparent">Leia mais</a>
             </article>
           </div>
           {% endfor %}
