--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -33,7 +33,7 @@ layout: default
               {% unless forloop.last %}&nbsp;{% endunless %} {% endfor %}
               <h4 class="title-border"><a class="text-dark" href="{{ post.url | relative_url }}">{{post.title}}</a></h4>
               <p>{{ post.content | strip_html | truncatewords: 35 }}</p>
-              <a href="{{ post.url | relative_url }}" class="btn btn-transparent">read more</a>
+              <a href="{{ post.url | relative_url }}" class="btn btn-transparent">Leia mais</a>
             </article>
           </div>
           {% endfor %}
