--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="navigation">
   <nav class="navbar navbar-expand-lg navbar-light">
     {% if site.logo %}
-    <a class="navbar-brand" href="{{site.baseurl}}"><img class="img-fluid" src="{{site.logo | relative_url}}" alt="{{site.title}}"></a>
+    <a class="navbar-brand" href="{{site.baseurl | absolute_url}}"><img class="img-fluid" src="{{site.logo | relative_url}}" alt="{{site.title}}"></a>
     {% endif %}
     <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navogation"
       aria-controls="navogation" aria-expanded="false" aria-label="Toggle navigation">
