--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,9 @@
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   
+  <!-- theme meta -->
+  <meta name="theme-name" content="parsa-jekyll" />
+  
   <!-- ** Plugins Needed for the Project ** -->
   <!-- Bootstrap -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/plugins/bootstrap/bootstrap.min.css">
